--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^5.2.0"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.0.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0"
   }
 }
